# CardanoAgentChain

./: .gitignore  .replit  README.md  app.py  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_servers.sh
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: yield_Maximizer_1764434145867.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: agent-card.tsx  agent-chat-panel.tsx  agent-demo.tsx  app-sidebar.tsx  blockchain-activity.tsx  blockchain-panel.tsx  chat-interface.tsx  collaboration-display.tsx  decision-log.tsx  hero-section.tsx  live-collaboration-display.tsx  metrics-grid.tsx  sokosumi-marketplace.tsx  system-flow.tsx  theme-toggle.tsx  transaction-item.tsx
client/src/components/examples/: agent-card.tsx  app-sidebar.tsx  blockchain-panel.tsx  chat-interface.tsx  decision-log.tsx  hero-section.tsx  metrics-grid.tsx  system-flow.tsx  theme-toggle.tsx  transaction-item.tsx
client/src/contexts/: agent-chat-context.tsx
client/src/hooks/: use-collaboration-socket.ts
client/src/lib/: queryClient.ts
client/src/pages/: agent.tsx  architecture.tsx  chat.tsx  home.tsx  logs.tsx  marketplace.tsx  sokosumi.tsx
python_backend/: agent_collaboration.py  agent_data.py  agents.py  app.py  blockchain_activity.py  blockchain_simulation.py  cardano_service.py  hydra_service.py  masumi_service.py  models.py  openai_service.py  sokosumi_service.py
server/: db.ts  index.ts  openai.ts  routes.ts  storage.ts
shared/: schema.ts
